Fix vert_no_center spacing and fix mobile support for left/right elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ img{
 
 .vert_no_center{
     text-align: center;
-    padding-top: 10vh;
+    padding-top: 75px;
 }
 
 .vert_center{
